--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>NZ Adventures</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex, nofollow">
   </head>
   <body>
     <div id="root"></div>
